--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>preview card</title>
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <img src="images/image-product-desktop.jpg" alt="">
+    <h1>Gabrielle Essence Eau De Parfum</h1>
+    <div>
+        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+            Perfumer-Creator for the House of CHANEL.</p>
+    </div>
+    <div class="price">
+        <h2> $149.99</h2>
+        <p>$169.99</p>
+    </div>
+    <div class="btn">
+        <h3>Add to Cart</h3>
+    </div>
 </body>
 </html>
