--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <img src="images/image-product-desktop.jpg" alt="">
-    <h1>Gabrielle Essence Eau De Parfum</h1>
-    <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+    <div class="message">
+        <h1>Gabrielle Essence Eau De Parfum</h1>
+        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
             Perfumer-Creator for the House of CHANEL.</p>
+    </div>
     <div class="price">
         <h2> $149.99</h2>
         <p>$169.99</p>
