--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
         <h1>Gabrielle Essence Eau De Parfum</h1>
         <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
             Perfumer-Creator for the House of CHANEL.</p>
-    </div>
-    <div class="price">
-        <h2> $149.99</h2>
-        <p>$169.99</p>
-    </div>
-    <div class="btn">
-        <h3>Add to Cart</h3>
+        <div class="flex">
+            <span class="price">$149.99</span>
+            <span class="figure">$169.99</span>
+        </div>
+        <h2>Add to Cart</h2>
     </div>
 </body>
 </html>
