--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container"></div>
     <img src="images/image-product-desktop.jpg" alt="">
     <div class="message">
         <h1>Gabrielle Essence Eau De Parfum</h1>
