--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container"></div>
-    <img src="images/image-product-desktop.jpg" alt="">
-    <div class="message">
-        <h1>Gabrielle Essence Eau De Parfum</h1>
-        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-            Perfumer-Creator for the House of CHANEL.</p>  
-        <div class="flex">
-            <span class="price">$149.99</span>
-            <span class="figure">$169.99</span>
+    <div class="container">
+        <div class="image">
+            <img src="images/image-product-desktop.jpg" alt="">
         </div>
-        <h2>Add to Cart</h2>
+        <div class="message">
+            <h1>Gabrielle Essence Eau De Parfum</h1>
+            <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+                Perfumer-Creator for the House of CHANEL.</p>  
+            <div class="figures">
+                <span class="price">$149.99</span>
+                <span class="figure">$169.99</span>
+            </div>
+            <h2>Add to Cart</h2>
+        </div>
     </div>
 </body>
 </html>
