--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="image">
-            <img src="images/image-product-desktop.jpg" alt="">
-        </div>
+        <img src="images/image-product-desktop.jpg" alt="">
         <div class="message">
+            <h2>perfume</h2>
             <h1>Gabrielle Essence Eau De Parfum</h1>
             <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
                 Perfumer-Creator for the House of CHANEL.</p>  
@@ -21,7 +20,7 @@
                 <span class="price">$149.99</span>
                 <span class="figure">$169.99</span>
             </div>
-            <h2>Add to Cart</h2>
+            <button>Add to Cart</button>
         </div>
     </div>
 </body>
